--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 					<dd><a href="#video" class="active">The Video</a></dd>
 				</dl>
 
-				<ul class="nice tabs-content contained active">
-					<li id="videoTab">
+				<ul class="nice tabs-content contained ">
+					<li id="videoTab" class="active">
 						<div class="flex-video widescreen ">
+
+							<p>The Audio is not the best quality (I was on the road).</p>
 
 							<video id="video" class="video-js vjs-default-skin" controls width="960" height="540" poster="video-snapshot.png" preload="auto" data-setup="{}">
 							 <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.mp4">
