Update UI with controls

--- a/index.html
+++ b/index.html
@@ -38,39 +38,26 @@
 		<div class="row">
 			<div class="twelve columns">
 				<h1>Ruby Off Rails Snippet: Clone Wars</h1>
-				<p>Released on April 25, 2012</p>
+				<p>Released on April 25, 2012 -- The Audio is not the best quality (I was on the road).</p>
 				<hr />
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="eight columns">
-				<a href="https://github.com/rubyoffrails/CloneWars" class="large nice button">The Source Code<a/>
+			<div class="six columns centered">
+				<a href="https://github.com/rubyoffrails/CloneWars" class="nice button">The Source Code<a/>
+				<a href="http://rubyoffrails.com" class="nice button red">Ruby off Rails<a/>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="twelve columns">
+			<div class="twelve columns" style="padding-top: 20px">
 
-				<dl class="nice contained tabs">
-					<dd><a href="#video" class="active">The Video</a></dd>
-				</dl>
-
-				<ul class="nice tabs-content contained ">
-					<li id="videoTab" class="active">
-						<div class="flex-video widescreen ">
-
-							<p>The Audio is not the best quality (I was on the road).</p>
-
-							<video id="video" class="video-js vjs-default-skin" controls width="960" height="540" poster="video-snapshot.png" preload="auto" data-setup="{}">
-							 <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.mp4">
-							 <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.ogv">
-							 <source type="video/webm" src="http://rubyoffrails.s3.amazonaws.com/clonewars.webm">
-							</video>
-
-						</div>
-					</li>
-				</ul>
+        <video id="video" class="video-js vjs-default-skin" controls width="980" height="600" poster="video-snapshot.png" preload="auto" data-setup="{}">
+         <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.mp4">
+         <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.ogv">
+         <source type="video/webm" src="http://rubyoffrails.s3.amazonaws.com/clonewars.webm">
+        </video>
 
 			</div>
 		</div>
