Update UI with controls

--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
 		</div>
 
 		<div class="row">
-			<div class="six columns centered">
-				<a href="https://github.com/rubyoffrails/CloneWars" class="nice button">The Source Code<a/>
-				<a href="http://rubyoffrails.com" class="nice button red">Ruby off Rails<a/>
-			</div>
+        <ul class="block-grid two-up">
+          <li><a href="https://github.com/rubyoffrails/CloneWars" class="nice button">The Source Code<a/></li>
+        </ul>
 		</div>
 
 		<div class="row">
-			<div class="twelve columns" style="padding-top: 20px">
+			<div class="twelve columns" >
 
         <video id="video" class="video-js vjs-default-skin" controls width="980" height="600" poster="video-snapshot.png" preload="auto" data-setup="{}">
          <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.mp4">
