update with controls

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         </ul>
 		</div>
 
-		<div class="row">
-			<div class="twelve columns" >
+        <div class="row">
+          <div class="twelve columns" >
 
-        <video id="video" class="video-js vjs-default-skin" controls width="980" height="600" poster="video-snapshot.png" preload="auto" data-setup="{}">
-         <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.mp4">
-         <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.ogv">
-         <source type="video/webm" src="http://rubyoffrails.s3.amazonaws.com/clonewars.webm">
-        </video>
+            <video id="video" class="video-js vjs-default-skin" controls="" width="980" height="600" poster="video-snapshot.png" preload="auto" >
+              <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.mp4">
+              <source type="video/mp4" src="http://rubyoffrails.s3.amazonaws.com/clonewars.ogv">
+              <source type="video/webm" src="http://rubyoffrails.s3.amazonaws.com/clonewars.webm">
+            </video>
 
-			</div>
-		</div>
+          </div>
+        </div>
 	</div>
 	<!-- container -->
 
